Update on ranks

--- a/public/index.html
+++ b/public/index.html
@@ -921,6 +921,64 @@ SRBMiner-MULTI.exe --algorithm panthera --pool {{ ui.start.host }}:{{ ui.start.p
 
 
 
+</div>        </transition> 
+        <transition name="fade">
+        <div class="container-lg" v-if='currentPage === "ranks"'>
+
+
+<div class="row">
+
+  <div class="col-12 card">
+
+<ul class="nav nav-pills">
+    <li role="presentation">
+      <a class='user_navigate btn' :class='{active: rankNavigation === "hashes"}' v-on:click='rankNavigation="hashes"'>
+        <i class="fas fa-chart-bar"></i>&nbsp;
+        <span tkey="top10hashes">Top 25 Miners</span> (All Time)
+      </a>
+    </li>
+    <li role="presentation">
+    <a class='user_navigate btn' :class='{active: rankNavigation === "unblocker"}' v-on:click='rankNavigation="unblocker"'>
+        <i class="fas fa-money-bill-alt"></i>&nbsp;
+        <span tkey="top10unblocks">Top 25 Block Founders</span>
+      </a>  
+    </li>
+    <li role="presentation">
+    <a class='user_navigate btn' :class='{active: rankNavigation === "donate"}' v-on:click='rankNavigation="donate"'>
+        <i class="fas fa-futbol"></i>&nbsp;
+        <span tkey="top10donators">Top 25 donators</span>
+      </a>
+    </li>
+  </ul>
+  </div>
+
+  <div class='col-md-12 card' id='tabTopHashes'>
+          <table class="table table-striped table-responsive">
+              <thead>
+              <tr>
+                  <th class="text-center">#</th>
+                  <th class="text-center"><span tkey="miner">Miner</span></th>
+                  <th class="text-center"><span tkey="hashes">Hashes</span></th>
+                  <th class="text-center"><span tkey="shares">Last Share Submitted</span></th>
+                  <th class="text-center"><span tkey="donations">Donations</span></th>
+                  <th class="text-center"><span tkey="totalBlocks">Total Blocks</span></th>
+
+              </tr>
+              </thead>
+              <tbody>
+                <tr v-for='table in ui.ranks'>
+                   <td class="col1 text-center" > {{ table.position }} </td>
+                 <td class="col2 text-center" > {{ table.miner }} </td>
+                 <td class="col4 text-center" > {{ table.hashes }} </td>
+                 <td class="col5 text-center" > {{ table.lastShare }} </td>
+                 <td class="col6 text-center" > {{ table.donations }} </td>
+                 <td class="col8 text-center" > {{ table.blocksFound }} </td>
+             </tr>
+              </tbody>
+          </table>
+  </div>
+
+</div>
 </div>        </transition>  
       </div>
       <!-- <footer class="footer">
